--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     background-image: url(img/Background2.png);
-    background-position: 0;
+    background-position: 50% 50%;
     background-size: cover;
 }
 
@@ -10,54 +10,52 @@ h3 {
     text-align:center;
 }
 
-.header-text {
+.img {
+    width: 200px;
+    border-radius: 100%;
+    float: left;
+}
 
+.box {
     color:#06223e;
     background-color:#f6f7f6;
-    height: 300px;
     opacity: 80%;
+}
+
+.header-content {
+    width: 700px;
     line-height: 20px;
-    text-align:justify;
     padding: 70px 70px;
     margin-left: 5%;
     max-width: 40%;
     margin-top: 5%;
+}
+
+.header-list-line {
 
 }
 
 .main {
-    max-width: 59%;
-    margin-left: 21px;
+    text-align: justify;
+    width: 800px;
+    line-height: 20px;
+    padding: 70px 70px;
+    margin-left: 65px;
+    max-width: 40%;
+    margin-top: -70px;
 }
 
 .section-text {
-    color: #06223e;
-    background-color:#f6f7f6;
-    opacity: 80%;
-    display: inline-block;
-    line-height: 20px;
-    width: 30%;
-    vertical-align: top;
-    margin-top: 1%;
-    margin-left: 5%;
-    max-width: 50%;
 
-  }
+}
 
 .academica {
-    margin-left: auto;
 }
 
 .projetos {
-    margin-left: auto;
+
 }
 
 .footer {
-    color: #06223e;
-    background-color:#f6f7f6;
-    opacity: 80%;
-    margin-left: 5%;
-    max-width: 54%;
-    margin-top: -1%;
     
 }
