Atualização do Portfolio, empregando conceitos de CAIXA

--- a/style.css
+++ b/style.css
@@ -30,10 +30,11 @@ h3 {
     max-width: 40%;
     margin-top: 5%;
 }
-
+/*
 .header-list-line {
 
 }
+*/
 
 .main {
     text-align: justify;
@@ -44,7 +45,7 @@ h3 {
     max-width: 40%;
     margin-top: -70px;
 }
-
+/*
 .section-text {
 
 }
@@ -59,3 +60,4 @@ h3 {
 .footer {
     
 }
+*/
