--- a/style.css
+++ b/style.css
@@ -1,63 +1,57 @@
-/* CSS para Matheus Eduardo's Portfolio*/
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+}
 
 body {
-    background-image: url(img/Background2.png);
-    background-position: 50% 50%;
-    background-size: cover;
+    background-image: url(./img/Background.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 0% 0%;
+    background-size: 100% 100%;
 }
 
-h3 {
-    text-align:center;
+.container {
+    width: 100%;
+    height: 100%;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 64px auto 64px;
+    grid-template-areas:
+    "header header"
+    "main aside"
+    "footer footer";
+    gap: 16px;
 }
 
-.img {
-    width: 200px;
-    border-radius: 100%;
-    float: left;
+header {
+    opacity: 0.7;
+    background-color: aliceblue;
+    grid-area: header;
 }
 
-.box {
-    color:#06223e;
-    background-color:#f6f7f6;
-    opacity: 80%;
+main {
+    opacity: 0.7;
+    background-color: aliceblue;
+    grid-area: main;
 }
 
-.header-content {
-    width: 700px;
-    line-height: 20px;
-    padding: 70px 70px;
-    margin-left: 5%;
-    max-width: 40%;
-    margin-top: 5%;
-}
-/*
-.header-list-line {
-
-}
-*/
-
-.main {
-    text-align: justify;
-    width: 800px;
-    line-height: 20px;
-    padding: 70px 70px;
-    margin-left: 65px;
-    max-width: 40%;
-    margin-top: -70px;
-}
-/*
-.section-text {
-
+aside {
+    opacity: 0.7;
+    background-color: aliceblue;
+    grid-area: aside;
 }
 
-.academica {
+footer {
+    opacity: 0.7;
+    background-color: aliceblue;
+    grid-area: footer;
 }
-
-.projetos {
-
-}
-
-.nav {
-    
-}
-*/
